# coordinate_transformer

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: config.yaml  configBadTransform.yaml  configInvalidBounds.yaml
include/coordinate_transformer/: coordinate_transformer.hpp
src/: coordinate_transformer.cpp
test/: coordinate_transformer_test.cpp
test/configs/: config.yaml  configBadBounds.yaml  configNoTransforms.yaml  configOutOfBounds.yaml  configRotation.yaml
